--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "clsx": "^2.1.0",
     "date-fns": "^3.4.0",
     "lucide-react": "^0.350.0",
-    "next": "14.1.3",
     "react": "^18",
     "react-datepicker": "^6.3.0",
     "react-dom": "^18",
@@ -41,6 +40,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-tailwindcss": "^3.14.3",
+    "next": "^14.2.4",
     "postcss": "^8",
     "prettier": "^3.2.5",
     "tailwindcss": "^3.3.0",
